11 February 2008: Wouter
	- changed library to use ub_ instead of ub_val_ as prefix.
	- statistics output text nice.

8 February 2008: Wouter
	- test program for multiple queries over a TCP channel.
	- tpkg test for stream tcp queries.
	- unbound replies to multiple TCP queries on a TCP channel.
	- fixup misclassification of root referral with NS in answer
	  when validating a nonrec query.
	- tag 0.9
	- layout of manpages, spelling fix in header, manpages process by
	  makedist, list asynclook and tcpstream tests as ldns-testns
	  required.

7 February 2008: Wouter
	- moved up all current level 2 to be level 3. And 3 to 4.
	  to make room for new debug level 2 for detailed information 
	  for operators.
	- verbosity level 2. Describes recursion and validation.
	- cleaner configure script and fixes for libevent solaris.
	- signedness for log output memory sizes in high verbosity.

6 February 2008: Wouter
	- clearer explanation of threading configure options.
	- fixup asynclook test for nothreading (it creates only one process
	  to do the extended test).
	- changed name of ub_val_result_free to ub_val_resolve_free.
	- removes warning message during library linking, renamed
	  libunbound/unbound.c -> libunbound.c and worker to libworker.
	- fallback without EDNS if result is NOTIMPL as well as on FORMERR.

5 February 2008: Wouter
	- statistics-interval: seconds option added.
	- test for statistics option
	- ignore errors making directories, these can occur in parallel builds
	- fixup Makefile strip command and libunbound docs typo.

31 January 2008: Wouter
	- bg thread/process reads and writes the pipe nonblocking all the time
	  so that even if the pipe is buffered or so, the bg thread does not
	  block, and services both pipes and queries.

30 January 2008: Wouter
	- check trailing / on chrootdir in checkconf.
	- check if root hints and anchor files are in chrootdir.
	- no route to host tcp error is verbosity level 2. 