@@ -1,19 +1,20 @@
-ub_val_ctx_create
-ub_val_ctx_delete
-ub_val_ctx_config
-ub_val_ctx_set_fwd
-ub_val_ctx_resolvconf
-ub_val_ctx_add_ta
-ub_val_ctx_add_ta_file
-ub_val_ctx_trustedkeys
-ub_val_ctx_debuglevel
-ub_val_ctx_async
-ub_val_poll
-ub_val_wait
-ub_val_fd
-ub_val_process
-ub_val_resolve
-ub_val_resolve_async
-ub_val_cancel
-ub_val_resolve_free
-ub_val_strerror
+ub_ctx_create
+ub_ctx_delete
+ub_ctx_config
+ub_ctx_set_fwd
+ub_ctx_resolvconf
+ub_ctx_hosts
+ub_ctx_add_ta
+ub_ctx_add_ta_file
+ub_ctx_trustedkeys
+ub_ctx_debuglevel
+ub_ctx_async
+ub_poll
+ub_wait
+ub_fd
+ub_process
+ub_resolve
+ub_resolve_async
+ub_cancel
+ub_resolve_free
+ub_strerror
