@@ -1,6 +1,7 @@
 11 February 2008: Wouter
 	- changed library to use ub_ instead of ub_val_ as prefix.
 	- statistics output text nice.
+	- etc/hosts handling.
 
 8 February 2008: Wouter
 	- test program for multiple queries over a TCP channel.
